--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -50,7 +50,7 @@ general {
 
     layout = dwindle
     no_focus_fallback = true
-    resize_on_border = false
+    resize_on_border = true
     hover_icon_on_border = false
 }
 
