--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -74,10 +74,10 @@ decoration {
         special = false
     }
 
-    drop_shadow = yes
-    shadow_range = 6
-    shadow_render_power = 4
-    col.shadow = rgba(1a1a1add)
+    # drop_shadow = yes
+    # shadow_range = 6
+    # shadow_render_power = 4
+    # col.shadow = rgba(1a1a1add)
 
     dim_special = 0.1;
 }
