--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -4,7 +4,7 @@ debug {
     enable_stdout_logs = true
 }
 
-monitor=DP-2,3840x2160,0x0,1.6667
+monitor=HDMI-A-1,3840x2160,0x0,1.6667
 monitor=DP-3,3840x2160,2304x0,1.6667
 monitor=eDP-1,preferred,auto,1.75
 
