firefox theme fix

--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -56,7 +56,7 @@ general {
 
 misc {
     new_window_takes_over_fullscreen = 2
-    focus_on_activate = true
+    focus_on_activate = false
 }
 
 binds {
