--- a/modules/linux/desktop/hyprland/hyprpaper.conf
+++ b/modules/linux/desktop/hyprland/hyprpaper.conf
@@ -7,8 +7,8 @@ preload = $dir/wall2.png
 preload = $dir/code-monitor-closeup.png
 
 wallpaper = eDP-1,$dir/wall2.png
-wallpaper = DP-2,$cur
-wallpaper = DP-3,$dir/wall-2.png
+wallpaper = HDMI-A-1,$cur
+wallpaper = DP-1,$dir/wall2.png
 
 splash = true  # enable splash text rendering over the wallpaper
 
