rust-analyzer.cargo.targetDir
Fixes build files conflict with command line cargo

--- a/modules/common/programs/Cursor/settings.json
+++ b/modules/common/programs/Cursor/settings.json
@@ -57,9 +57,12 @@
   "cursor.aipreview.enabled": true,
   "cursor.general.enableShadowWorkspace": false,
   "explorer.confirmDelete": false,
+  "rust-analyzer.server.path": "rust-analyzer",
   "rust-analyzer.inlayHints.maxLength": 40,
   "rust-analyzer.inlayHints.renderColons": true,
   "rust-analyzer.testExplorer": true,
+  "rust-analyzer.checkOnSave": true,
+  "rust-analyzer.cargo.targetDir": true,
   "vscode-neovim.revealCursorScrollLine": true,
   "vscode-neovim.neovimViewportHeightExtend": 2,
   "shellcheck.logLevel": "warn",
