--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -44,7 +44,7 @@ general {
     gaps_in = 5
     gaps_out = 8
 
-    border_size = 3
+    border_size = 4
     col.active_border = rgba($mauve) rgba($teal) 45deg
     col.inactive_border = rgba($transparent)
 
@@ -68,7 +68,7 @@ decoration {
 
     blur {
         enabled = true
-        size = 4
+        size = 3
         passes = 2
 
         special = false
@@ -111,19 +111,19 @@ layerrule = ignorealpha 0.0,rofi
 animations {
     enabled = yes
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.00
+    bezier = myBezier, 0.1, 0.95, 0.25, 1.00
     bezier = smooth-linear, 0.25, 1.0, 0.1, 1.0
     bezier = overshot, 0.39, 0.99, 0.25, 1.07
 
     animation = windows, 1, 5, smooth-linear
     animation = windowsIn, 1, 5, myBezier, popin 50%
     animation = windowsOut, 1, 5, myBezier, popin 80%
-    animation = border, 1, 10, default
+    animation = border, 1, 3, smooth-linear
     # animation = borderangle, 1, 8, default
     animation = borderangle, 1, 200, default, loop
     animation = fade, 1, 7, myBezier
     # animation = workspaces, 1, 5, overshot, slidevert # slidefade 20%
-    animation = workspaces, 1, 5, myBezier, # slidefade 20%
+    animation = workspaces, 1, 4, myBezier # , slidefade 20%
     animation = layers, 1, 6, myBezier
     animation = fadeLayers, 1, 6, myBezier
 }
@@ -206,10 +206,10 @@ binde = SUPER, equal, exec, change-brightness 3 + 2
 binde = SUPER, minus, exec, change-brightness 3 - 2
 bind = SUPER, grave, exec, change-brightness 3 96
 bind = SUPER, backslash, exec, change-brightness 3 80
-binde = SUPER CONTROL, equal, exec, change-brightness 6 + 2
-binde = SUPER CONTROL, minus, exec, change-brightness 6 - 2
-bind = SUPER CONTROL, grave, exec, change-brightness 6 96
-bind = SUPER CONTROL, backslash, exec, change-brightness 6 88
+binde = SUPER CONTROL, equal, exec, change-brightness 4 + 2
+binde = SUPER CONTROL, minus, exec, change-brightness 4 - 2
+bind = SUPER CONTROL, grave, exec, change-brightness 4 96
+bind = SUPER CONTROL, backslash, exec, change-brightness 4 88
 
 binde = ,XF86MonBrightnessUp, exec, lightctl -d + 5
 binde = ,XF86MonBrightnessDown, exec, lightctl -d - 5
