--- a/modules/linux/desktop/hyprland/hyprpaper.conf
+++ b/modules/linux/desktop/hyprland/hyprpaper.conf
@@ -10,7 +10,7 @@ wallpaper = eDP-1,$dir/wall2.png
 wallpaper = HDMI-A-1,$cur
 wallpaper = DP-1,$dir/wall2.png
 
-splash = true  # enable splash text rendering over the wallpaper
+# splash = true  # enable splash text rendering over the wallpaper
 
 ipc = on
 
