--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -229,6 +229,8 @@ bind = ALT, left, movefocus, l
 bind = ALT, right, movefocus, r
 bind = ALT, up, movefocus, u
 bind = ALT, down, movefocus, d
+bind = ALT CONTROL, period, cyclenext, floating
+bind = ALT CONTROL SHIFT, period, cyclenext, tiled
 
 # left/right workspace
 bind = SUPER, left, workspace, m-1
