--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -233,8 +233,8 @@ bind = ALT CONTROL, period, cyclenext, floating
 bind = ALT CONTROL SHIFT, period, cyclenext, tiled
 
 # left/right workspace
-bind = SUPER, left, workspace, m-1
-bind = SUPER, right, workspace, m+1
+bind = SUPER, left, exec, hyprctl.py workspace m-1
+bind = SUPER, right, exec, hyprctl.py workspace m+1
 
 # swapwindow
 bind = ALT SHIFT, left, swapwindow, l
@@ -256,26 +256,26 @@ bind = ALT SHIFT CONTROL, down, movewindoworgroup, d
 bind = SUPER, W, exec, hyprctl.py cycle-wallpaper
 
 # Switch workspaces with mainMod + [0-9]
-bind = ALT, 1, exec, hyprctl.py goto-workspace 1
-bind = ALT, 2, exec, hyprctl.py goto-workspace 2
-bind = ALT, 3, exec, hyprctl.py goto-workspace 3
-bind = ALT, 4, exec, hyprctl.py goto-workspace 4
-bind = ALT, 5, exec, hyprctl.py goto-workspace 5
-bind = ALT, 6, exec, hyprctl.py goto-workspace 6
-bind = ALT, 7, exec, hyprctl.py goto-workspace 7
-bind = ALT, 8, exec, hyprctl.py goto-workspace 8
-bind = ALT, 9, exec, hyprctl.py goto-workspace 9
-bind = ALT, 0, exec, hyprctl.py goto-workspace 10
-bind = SUPER, 1, workspace, 11
-bind = SUPER, 2, workspace, 12
-bind = SUPER, 3, workspace, 13
-bind = SUPER, 4, workspace, 14
-bind = SUPER, 5, workspace, 15
-bind = SUPER, 6, workspace, 16
-bind = SUPER, 7, workspace, 17
-bind = SUPER, 8, workspace, 18
-bind = SUPER, 9, workspace, 19
-bind = SUPER, 0, workspace, 20
+bind = ALT, 1, exec, hyprctl.py workspace 1
+bind = ALT, 2, exec, hyprctl.py workspace 2
+bind = ALT, 3, exec, hyprctl.py workspace 3
+bind = ALT, 4, exec, hyprctl.py workspace 4
+bind = ALT, 5, exec, hyprctl.py workspace 5
+bind = ALT, 6, exec, hyprctl.py workspace 6
+bind = ALT, 7, exec, hyprctl.py workspace 7
+bind = ALT, 8, exec, hyprctl.py workspace 8
+bind = ALT, 9, exec, hyprctl.py workspace 9
+bind = ALT, 0, exec, hyprctl.py workspace 10
+bind = SUPER, 1, exec, hyprctl.py workspace 11
+bind = SUPER, 2, exec, hyprctl.py workspace 12
+bind = SUPER, 3, exec, hyprctl.py workspace 13
+bind = SUPER, 4, exec, hyprctl.py workspace 14
+bind = SUPER, 5, exec, hyprctl.py workspace 15
+bind = SUPER, 6, exec, hyprctl.py workspace 16
+bind = SUPER, 7, exec, hyprctl.py workspace 17
+bind = SUPER, 8, exec, hyprctl.py workspace 18
+bind = SUPER, 9, exec, hyprctl.py workspace 19
+bind = SUPER, 0, exec, hyprctl.py workspace 20
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = ALT SHIFT, 1, movetoworkspace, 1
