--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -4,9 +4,16 @@ debug {
     enable_stdout_logs = true
 }
 
-monitor=HDMI-A-1,3840x2160,0x0,1.6667
-monitor=DP-1,3840x2160,2304x0,1.6667
-monitor=eDP-1,preferred,auto,1.75
+monitor = , preferred, auto, 1.667
+monitor = HDMI-A-1, 3840x2160, 0x0, 1.6667, bitdepth, 10
+monitor = DP-1, 3840x2160, 2304x0, 1.6667
+monitor = eDP-1, preferred, auto, 1.75
+
+experimental {
+  # wide_color_gamut = true
+  # hdr = true
+  xx_color_management_v4 = true
+}
 
 exec-once = dbus-update-activation-environment --systemd PATH DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service
 
@@ -147,8 +154,19 @@ windowrulev2 = float,class:(.?themechanger.*)
 windowrulev2 = float,class:(gedit.*)
 windowrulev2 = float,class:(lich.rbw.*)
 windowrulev2 = fullscreen,class:(looking-glass-client.*)
-
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+# Workspace rules and windows
+workspace = 1,monitor:HDMI-A-1
+workspace = 2,monitor:HDMI-A-1
+workspace = 3,monitor:HDMI-A-1
+workspace = 4,monitor:HDMI-A-1
+workspace = 5,monitor:DP-1
+workspace = 15,monitor:DP-1
+# workspace = 13,
+windowrulev2 = workspace 13,title:(.* - Cursor)
+windowrulev2 = workspace 3,title:(.*nixpkgs - Cursor)
+windowrulev2 = workspace 3,title:(.*ags2 - Cursor)
 
 bind = ALT CTRL, Q, killactive,
 bind = SUPER SHIFT CTRL, Q, exit,
