ags mpris, changes

--- a/modules/common/programs/Cursor/settings.json
+++ b/modules/common/programs/Cursor/settings.json
@@ -184,5 +184,6 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cursor.diffs.useCharacterLevelDiffs": true,
-  "editor.unicodeHighlight.ambiguousCharacters": false
+  "editor.unicodeHighlight.ambiguousCharacters": false,
+  "diffEditor.ignoreTrimWhitespace": false
 }
