--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -237,10 +237,12 @@ bind = SUPER CONTROL, 1, exec, disp -s linux
 bind = SUPER CONTROL, 2, exec, disp -s windows
 
 # media controls
-bind = SUPER CONTROL, up, exec, ags -r 'currentPlayer()?.playPause()'
-bind = SUPER CONTROL, down, exec, ags -r 'selectNextPlayer()'
-bind = SUPER CONTROL, left, exec, ags -r 'currentPlayer()?.previous()'
-bind = SUPER CONTROL, right, exec, ags -r 'currentPlayer()?.next()'
+bind = SUPER CONTROL, up, exec, ags request 'playPause'
+bind = SUPER CONTROL, down, exec, ags request 'selectNextPlayer'
+bind = SUPER CONTROL, left, exec, ags request 'previousTrack'
+bind = SUPER CONTROL, right, exec, ags request 'nextTrack'
+bind = SUPER CONTROL SHIFT, left, exec, ags request 'seekDelta -10'
+bind = SUPER CONTROL SHIFT, right, exec, ags request 'seekDelta 10'
 
 # Move focus with mainMod + arrow keys
 bind = ALT, left, movefocus, l
