--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -71,7 +71,7 @@ binds {
 }
 
 decoration {
-    rounding = 10
+    rounding = 7
 
     blur {
         enabled = true
@@ -147,7 +147,7 @@ gestures {
 # use float for these programs
 windowrulev2 = float,class:([Mm]pv.*)
 windowrulev2 = float,class:([Ee]og.*)
-windowrulev2 = float,class:([Pp]avucontrol.*)
+windowrulev2 = float,class:.*([Pp]avucontrol.*)
 windowrulev2 = float,class:([Nn]autilus.*)
 windowrulev2 = float,class:([Ss]team.*)
 windowrulev2 = float,class:(.?themechanger.*)
