--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -10,6 +10,7 @@ tab_powerline_style slanted
 allow_cloning yes
 notify_on_cmd_finish never
 # notify_on_cmd_finish always 30 notify
+hide_window_decorations yes
 
 # clear_all_shortcuts yes
 
