fix mbsyncrc for protonmail

--- a/modules/common/programs/Cursor/settings.json
+++ b/modules/common/programs/Cursor/settings.json
@@ -192,5 +192,8 @@
   "diffEditor.ignoreTrimWhitespace": false,
   "python.poetryPath": "poetry",
   "vsicons.dontShowNewVersionMessage": true,
-  "editor.minimap.enabled": true
+  "editor.minimap.enabled": true,
+  "files.associations": {
+    "mbsyncrc": "plaintext"
+  }
 }
