--- a/modules/common/programs/mpv/input.conf
+++ b/modules/common/programs/mpv/input.conf
@@ -21,4 +21,4 @@ Ctrl+h cycle-values hwdec auto no
 
 Ctrl+r cycle-values video-rotate 0 90 180 270
 
-Ctrl+s cycle sub-ass ; sub-reload
+Ctrl+s cycle sub-ass
