--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -37,7 +37,7 @@ map kitty_mod+b move_window_backward
 map kitty_mod+r start_resizing_window
 map kitty_mod+l next_layout
 
-map ctrl+alt+shift+, load_config_file
+map ctrl+kitty_mod+, load_config_file
 
 map kitty_mod+equal change_font_size all +0.5
 map kitty_mod+minus change_font_size all -0.5
