--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -47,9 +47,9 @@ input {
 
 general {
     gaps_in = 5
-    gaps_out = 6
+    gaps_out = 7
 
-    border_size = 4
+    border_size = 5
     col.active_border = rgba($mauve) rgba($teal) 45deg
     col.inactive_border = rgba($transparent)
 
@@ -93,8 +93,11 @@ group {
         render_titles = false
         font_family = "Sans Medium"
         font_size = 14
-        height = 8
+        height = 14
+        indicator_height = 5
     }
+    col.border_active = rgba($mauve) rgba($teal) 45deg
+    col.border_inactive = rgba($transparent)
 }
 
 # enable blur for avizo popups
@@ -116,7 +119,7 @@ layerrule = ignorealpha 0.0,rofi
 animations {
     enabled = yes
 
-    bezier = myBezier, 0.1, 0.95, 0.25, 1.00
+    bezier = myBezier, 0.01, 0.95, 0.25, 1.00
     bezier = smooth-linear, 0.25, 1.0, 0.1, 1.0
     bezier = overshot, 0.39, 0.99, 0.25, 1.07
 
