--- a/modules/common/programs/mpv/mpv.conf
+++ b/modules/common/programs/mpv/mpv.conf
@@ -17,11 +17,11 @@ osd-margin-y=4
 osd-playing-msg='${filename}'
 osd-on-seek=msg-bar
 osd-msg3='${osd-sym-cc} ${playback-time} / ${duration} <${percent-pos}%>'
-osd-font='JetBrains Mono Bold'
+osd-font='Inter'
 osd-font-size=21
-osd-color='#E8D0D0D0'
-osd-border-size=1.5
-osd-border-color='#E8101010'
+osd-color='#F0DDDDDD'
+osd-border-size=0.6
+osd-border-color='#E0101010'
 osd-bar-align-y=0.9
 
 embeddedfonts=no
