--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -91,10 +91,11 @@ group {
     groupbar {
         enabled = true
         render_titles = false
-        font_family = "Sans Medium"
-        font_size = 14
-        height = 14
-        indicator_height = 5
+        font_size = 13
+        height = 13
+        indicator_height = 1
+        gradients = true
+        rounding = 4
     }
     col.border_active = rgba($mauve) rgba($teal) 45deg
     col.border_inactive = rgba($transparent)
@@ -131,7 +132,7 @@ animations {
     animation = borderangle, 1, 200, default, loop
     animation = fade, 1, 7, myBezier
     # animation = workspaces, 1, 5, overshot, slidevert # slidefade 20%
-    animation = workspaces, 1, 4, myBezier # , slidefade 20%
+    animation = workspaces, 1, 3, myBezier
     animation = layers, 1, 6, myBezier
     animation = fadeLayers, 1, 6, myBezier
 }
