--- a/modules/common/programs/mpv/script-opts/stats.conf
+++ b/modules/common/programs/mpv/script-opts/stats.conf
@@ -1,8 +1,8 @@
 duration=2
 font='Inter'
-font_mono='JetBrainsMono Nerd Font'
-font_size=8
-#font_color='FFFFFF'
-border_size=0.6
-border_color=202020
-alpha=25
+font_mono='JetBrainsMono Nerd Font Semibold'
+font_size=21
+font_color=F0F0F0
+border_size=1.4
+# border_color=080808
+alpha=20
