--- a/modules/common/programs/kitty/extra.conf
+++ b/modules/common/programs/kitty/extra.conf
@@ -1,5 +1,5 @@
 cursor_shape block
-# background_opacity 0.8
+background_opacity 1.0
 # font_family JetBrainsMono NF Semibold
 # font_size 10.0
 window_padding_width 2.2
