flake.lock + fixes

--- a/modules/common/programs/mpv/script-opts/stats.conf
+++ b/modules/common/programs/mpv/script-opts/stats.conf
@@ -1,8 +1,8 @@
 duration=2
-font='Inter'
-font_mono='JetBrainsMono Nerd Font Semibold'
-font_size=21
+font='monospace'
+font_mono='monospace'
+font_size=24
 font_color=F0F0F0
-border_size=1.4
+border_size=1.5
 # border_color=080808
 alpha=20
