--- a/modules/common/programs/mpv/mpv.conf
+++ b/modules/common/programs/mpv/mpv.conf
@@ -17,10 +17,10 @@ osd-margin-y=4
 osd-playing-msg='${filename}'
 osd-on-seek=msg-bar
 osd-msg3='${osd-sym-cc} ${playback-time} / ${duration} <${percent-pos}%>'
-osd-font='Inter'
-osd-font-size=21
+osd-font='monospace'
+osd-font-size=26
 osd-color='#F0DDDDDD'
-osd-border-size=0.6
+osd-border-size=1.3
 osd-border-color='#E0101010'
 osd-bar-align-y=0.9
 
