--- a/modules/common/programs/Cursor/settings.json
+++ b/modules/common/programs/Cursor/settings.json
@@ -46,7 +46,7 @@
   "workbench.editor.limit.enabled": true,
   "workbench.editor.limit.perEditorGroup": true,
   "workbench.editor.limit.excludeDirty": true,
-  "workbench.editor.limit.value": 5,
+  "workbench.editor.limit.value": 8,
   "extensions.experimental.affinity": {
     "asvetliakov.vscode-neovim": 1
   },
@@ -57,7 +57,8 @@
   "cursor-retrieval.canAttemptGithubLogin": true,
   "cursor.general.enableShadowWorkspace": false,
   "explorer.confirmDelete": false,
-  "rust-analyzer.server.path": "rust-analyzer",
+  // "rust-analyzer.server.path": "rust-analyzer",
+  "rust-analyzer.server.path": "./rust-analyzer.sh",
   "rust-analyzer.inlayHints.maxLength": 40,
   "rust-analyzer.inlayHints.renderColons": true,
   "rust-analyzer.testExplorer": true,
@@ -198,5 +199,9 @@
   "redhat.telemetry.enabled": true,
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "editor.minimap.enabled": true,
+  "[markdown]": {
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
   }
 }
