zshrc reload, emacs config

--- a/modules/common/programs/Cursor/settings.json
+++ b/modules/common/programs/Cursor/settings.json
@@ -192,7 +192,7 @@
   "python.poetryPath": "poetry",
   "vsicons.dontShowNewVersionMessage": true,
   "files.associations": {
-    "*.rexl": "clojure",
+    "*.rex": "clojure",
     "mbsyncrc": "plaintext"
   },
   "update.releaseTrack": "prerelease",
